<resources>
    <string name="app_name">CarbSmart</string>
    <string name="welcomeText">Welcome!</string>
    <string name="appDescription">This is an app aimed for those with Type 1 Diabetes.</string>
    <string name="enterMaxInstrStr">Enter your max carb count for a meal below:</string>
    <string name="mealsTitleStr">Order</string>
    <string name="backButtonDescriptionStr">Back button</string>
    <string name="addButtonDescriptionStr">Add button</string>
    <string name="homeButtonDescriptionStr">Home button</string>
    <string name="whiteCircleDescriptionStr">White circle</string>
    <string name="restaurantChoice">Restaurant</string>
    <string name="homemadeChoice">Homemade Meal</string>
    <string name="nameMeal">Meal Name</string>
    <string name="restaurantSearchDescriptionStr">Search for Restaurant</string>
    <string name="dropDownDescriptionStr">Search for Restaurant drop-down</string>
    <string name="restaurantSelectionPageTitleStr">Restaurant</string>

    <string name="foodNameExample">ex. Apples, bread, etc.</string>
    <string name="servingSizeExample">ex. 1 , 2 , etc.</string>
    <string name="gramsOfCarbsExample">ex. 15, 20, etc.</string>
    <string name="servingFractionExample">Default 100 Ex. 10, 20, etc.</string>
    <string name="servingUnits">ex. grams, carbs, etc.</string>
    <string name="repeatOrderConstruction">Add Order</string>
    <string name="restaurantChoiceInstruction">Search for your restaurant of choice:</string>
</resources>