<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".MealConstruction">

    <ImageButton
        android:id="@+id/forwardButton2"
        android:layout_width="128dp"
        android:layout_height="117dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:layout_weight="1"
        android:alpha="1"
        android:background="#00FE904D"
        android:contentDescription="@string/backButtonDescriptionStr"
        android:onClick="performMealBreakdown"
        android:rotationY="-180"
        android:scaleX="@dimen/backButtonScale"
        android:scaleY="@dimen/backButtonScale"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputServingPercentage"
        app:srcCompat="@drawable/left_arrow"
        app:tint="@color/customBlue" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topColorBlock"
        android:layout_width="match_parent"
        android:layout_height="@dimen/topColorBlockHeight"

        android:background="@color/orange"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/whiteCircle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#00000000"
            android:contentDescription="@string/whiteCircleDescriptionStr"
            android:onClick="performRestaurantChoice"
            android:scaleX="@dimen/backButtonScale"
            android:scaleY="@dimen/backButtonScale"
            app:layout_constraintBottom_toBottomOf="@+id/backButton"
            app:layout_constraintEnd_toEndOf="@+id/backButton"
            app:layout_constraintStart_toStartOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="@+id/backButton"
            app:srcCompat="@drawable/circle"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/titleStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleX="1"
            android:text="@string/mealsTitleStr"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="48sp"
            android:translationY="70sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="128dp"
            android:layout_height="117dp"
            android:layout_weight="1"
            android:alpha="1"
            android:background="#00FE904D"
            android:contentDescription="@string/backButtonDescriptionStr"
            android:onClick="performRestaurantChoice"
            android:scaleX="@dimen/backButtonScale"
            android:scaleY="@dimen/backButtonScale"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/titleStr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/left_arrow"
            app:tint="@color/customBlue" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="107dp"
            android:layout_height="94dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/homeButtonDescriptionStr"
            android:foregroundTint="#000000"
            android:onClick="performWelcome"
            android:scaleX="4"
            android:scaleY="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/titleStr"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/home_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/foodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Food Name"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topColorBlock" />

    <EditText
        android:id="@+id/inputFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Order Name"
        android:inputType="textPersonName"
        android:onClick="performSearch"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodName" />

    <!--android:hint="@string/foodNameExample"-->

    <TextView
        android:id="@+id/servingSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="One Serving Size"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputFoodName" />

    <EditText
        android:id="@+id/inputServingSize"
        android:layout_width="204dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/servingSizeExample"
        android:inputType="textPersonName"
        android:textAlignment="viewEnd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/servingSize" />

    <TextView
        android:id="@+id/gOfCarbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Grams of Carbs per Serving"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputServingSize" />

    <EditText
        android:id="@+id/inputGramsOfCarbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/gramsOfCarbsExample"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gOfCarbs" />

    <TextView
        android:id="@+id/servingFraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Percentage of Serving You're Eating"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputGramsOfCarbs" />

    <EditText
        android:id="@+id/inputServingPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/servingFractionExample"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/servingFraction" />

    <EditText
        android:id="@+id/idInputServingUnits"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/servingUnits"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/inputServingSize"
        app:layout_constraintStart_toEndOf="@+id/inputServingSize"
        app:layout_constraintTop_toTopOf="@+id/inputServingSize" />

</androidx.constraintlayout.widget.ConstraintLayout>

