<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".RestaurantVsHome">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topColorBlock"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_marginTop="4dp"
        android:background="@color/orange"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/whiteBoxForArrow"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/backButton"
            app:layout_constraintEnd_toEndOf="@+id/backButton"
            app:layout_constraintStart_toStartOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="@+id/backButton">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/titleStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleX="1"
            android:text="@string/mealsTitleStr"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="48sp"
            android:translationY="70sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="128dp"
            android:layout_height="117dp"
            android:layout_weight="1"
            android:alpha="1"
            android:background="#00FE904D"
            android:contentDescription="@string/backButtonDescriptionStr"
            android:scaleX="4"
            android:scaleY="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/titleStr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/left_arrow"
            app:tint="@color/customBlue" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="107dp"
            android:layout_height="94dp"
            android:background="#00FFFFFF"
            android:foregroundTint="#000000"
            android:scaleX="4"
            android:scaleY="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/titleStr"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/home_button"
            android:contentDescription="@string/homeButtonDescriptionStr"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

