<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    tools:context=".MealConstruction">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topColorBlock"
        android:layout_width="match_parent"
        android:layout_height="@dimen/topColorBlockHeight"

        android:background="@color/orange"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/whiteCircle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#00000000"
            android:contentDescription="@string/whiteCircleDescriptionStr"
            android:scaleX="@dimen/backButtonScale"
            android:scaleY="@dimen/backButtonScale"
            app:layout_constraintBottom_toBottomOf="@+id/backButton"
            app:layout_constraintEnd_toEndOf="@+id/backButton"
            app:layout_constraintStart_toStartOf="@+id/backButton"
            app:layout_constraintTop_toTopOf="@+id/backButton"
            app:srcCompat="@drawable/circle"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/titleStr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleX="1"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="48sp"
            android:translationY="70sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="128dp"
            android:layout_height="117dp"
            android:layout_weight="1"
            android:alpha="1"
            android:background="#00FE904D"
            android:contentDescription="@string/backButtonDescriptionStr"
            android:onClick="performMealConstruction"
            android:scaleX="@dimen/backButtonScale"
            android:scaleY="@dimen/backButtonScale"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/titleStr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/left_arrow"
            app:tint="@color/customBlue" />

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_width="107dp"
            android:layout_height="94dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/homeButtonDescriptionStr"
            android:foregroundTint="#000000"
            android:onClick="performWelcome"
            android:scaleX="4"
            android:scaleY="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/titleStr"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/home_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomColorBlock"
        android:layout_width="match_parent"
        android:layout_height="200sp"

        android:background="@color/orange"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="96dp"
            android:text="Total"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.212"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textCarbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="31dp"
            android:text="Carbs"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textTotal"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textTotal"
            app:layout_constraintTop_toBottomOf="@+id/textTotal" />

        <TextView
            android:id="@+id/textNumCarbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textGrams"
            app:layout_constraintStart_toEndOf="@+id/textTotal"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textGrams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="56dp"
            android:text="g"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="223dp"
        android:layout_height="119dp"
        android:backgroundTint="@color/customBlue"
        android:onClick="performMealConstruction"
        android:text="@string/repeatOrderConstruction"
        app:layout_constraintBottom_toTopOf="@+id/bottomColorBlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topColorBlock"
        app:layout_constraintVertical_bias="0.836" />

    <TextView
        android:id="@+id/idDisplayOrdersText"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topColorBlock" />

</androidx.constraintlayout.widget.ConstraintLayout>